--- a/lib/smeagol/templates/page.mustache
+++ b/lib/smeagol/templates/page.mustache
@@ -2,17 +2,29 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>{{title}}</title>
+    <title>{{wiki_title}} - {{page_title}}</title>
     <link rel="stylesheet" href="/smeagol/main.css" type="text/css"/> 
     <link rel="stylesheet" href="/smeagol/pygment.css" type="text/css"/> 
   </head>
 
   <body>
     <div id="container">
-	    <h1>{{title}}</h1>
-	    <div>
+		<header>
+			<h1>{{wiki_title}}</h1>
+		</header>
+			
+		<article>
+			{{#is_not_home?}}
+			<h1>{{page_title}}</h1>
+			{{/is_not_home?}}
+    		<div id="content">
 {{{content}}}
-	    </div>
+			</div>
+		</article>
+
+		<footer>
+			<small>Last edited by <b>{{author}}</b> on {{date}}.</small>
+		</footer>
     </div>
   </body>
 </html>
