Removed footer on the home page.

--- a/lib/smeagol/templates/page.mustache
+++ b/lib/smeagol/templates/page.mustache
@@ -22,9 +22,11 @@
 			</div>
 		</article>
 
+		{{#is_not_home?}}
 		<footer>
 			<small>Last edited by <b>{{author}}</b> on {{date}}.</small>
 		</footer>
+		{{/is_not_home?}}
     </div>
   </body>
 </html>
