--- a/lib/smeagol/templates/page.mustache
+++ b/lib/smeagol/templates/page.mustache
@@ -12,7 +12,11 @@
 		<header>
 			<h1>{{wiki_title}}</h1>
 		</header>
-			
+		
+		<nav>
+			{{{menu_html}}}
+		</nav>
+		
 		<article>
 			{{#is_not_home?}}
 			<h1>{{page_title}}</h1>
