Fixed anchor CSS

--- a/lib/smeagol/public/smeagol/main.css
+++ b/lib/smeagol/public/smeagol/main.css
@@ -4,6 +4,16 @@ body {
 	line-height: 1.4em;
 }
 
+a {
+	color: #4183C4;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+
 header {
 }
 
