Added HTML5 shiv.

--- a/lib/smeagol/templates/page.mustache
+++ b/lib/smeagol/templates/page.mustache
@@ -5,6 +5,10 @@
     <title>{{wiki_title}} - {{page_title}}</title>
     <link rel="stylesheet" href="/smeagol/main.css" type="text/css"/> 
     <link rel="stylesheet" href="/smeagol/pygment.css" type="text/css"/> 
+
+    <!--[if lt IE 9]>
+    <script src="/smeagol/html5.js"></script>
+    <![endif]-->
   </head>
 
   <body>
