--- a/lib/smeagol/public/smeagol/main.css
+++ b/lib/smeagol/public/smeagol/main.css
@@ -1,3 +1,55 @@
+/* Reset from: http://meyerweb.com/eric/tools/css/reset/ */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+:focus {
+	outline: 0;
+}
+
+ins {
+	text-decoration: none;
+}
+del {
+	text-decoration: line-through;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+/* Main styles */
 body {
 	font: normal normal normal 13.34px/normal helvetica, arial, sans-serif;
 	font-size: 14px;
@@ -15,19 +67,22 @@ a:hover {
 
 
 header {
+	display: block;
 }
 
 footer {
-	border-top: 3px solid #ccc;
+	display: block;
+	border-top: 2px solid #ccc;
 	padding-top: 1px;
-	margin-top: 1.5em;
+	margin-top: 2.5em;
 	margin-bottom: 2em;
 }
 
 nav {
-	border-top: 2px solid #ddd;
-	border-bottom: 2px solid #ddd;
-	margin-bottom: 1.1em;
+	display: block;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 1.5em;
 }
 
 nav ul {
@@ -65,11 +120,13 @@ nav ul li a:hover {
 
 h1 {
 	font-size: 250%;
-	margin-bottom: 0.25em;
+	margin-top: 1em;
+	margin-bottom: 0.3em;
 }
 
 article h1 {
 	font-size: 150%;
+	margin-bottom: 0.7em;
 }
 
 #content {
@@ -93,14 +150,14 @@ article h1 {
 
 #content h3 {
 	font-size: 110%;
-	margin-top:1em;
-	margin-bottom:0.5em;
+	margin-top:1.25em;
+	margin-bottom:0.4em;
 	font-size: 1.17em;
 }
 
 #content p {
 	line-height: 1.5em;
-	margin: 0.5em 0em 1em 0em;
+	margin: 0.4em 0em 1em 0em;
 }
 
 #content ol {
@@ -139,4 +196,12 @@ pre, code {
 	color: #444;
 	font-size: 12px;
 	font: normal normal normal 12px/normal Monaco, 'Courier New', monospace;
+}
+
+pre > code {
+	border:none !important;
+}
+
+small {
+	font-size: 80%;
 }
