Add tagline to bottom of site.

--- a/lib/smeagol/templates/page.mustache
+++ b/lib/smeagol/templates/page.mustache
@@ -48,6 +48,10 @@
 
 		<footer>
 			<small>Last edited by <b>{{author}}</b> on {{date}}.</small>
+			<small style="float:right;">
+				This site is a <a href="https://github.com/blog/699-making-github-more-open-git-backed-wikis">GitHub Wiki</a>
+				mirror powered by <a href="http://smeagolrb.info">Smeagol</a>.
+			</small>
 		</footer>
     </div>
   </body>
