Add `settings.mount_path` so Smeagol can be mounted on a sub-uri.
Smeagol can be configured to run as a regular rack application and can
be hosted on unicorn, passenger, etc. This patch accomodates the
situation where Smeagol needs to be mounted on a path under the root
of a domain. For example:

    # config.ru
    require 'smeagol'

    def resolve_git_binary
      # ...
    end

    Smeagol::App.set(:repositories, [{:path => Dir.pwd}.to_ostruct])
    Smeagol::App.set(:git, resolve_git_binary)
    Smeagol::App.set(:cache_enabled, true)
    Smeagol::App.set(:mount_path, '/wiki')

    map '/wiki' do
      run Smeagol::App
    end

--- a/lib/smeagol/templates/versions.mustache
+++ b/lib/smeagol/templates/versions.mustache
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{wiki_title}} - Versions</title>
-    <link rel="stylesheet" href="/smeagol/main.css" type="text/css"/> 
+    <link rel="stylesheet" href="{{base_path}}smeagol/main.css" type="text/css"/>
 
     <!--[if lt IE 9]>
-    <script src="/smeagol/html5.js"></script>
+    <script src="{{base_path}}smeagol/html5.js"></script>
     <![endif]-->
 
 	{{#tracking_id}}
