--- a/lib/smeagol/templates/page.mustache
+++ b/lib/smeagol/templates/page.mustache
@@ -3,11 +3,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{wiki_title}} - {{page_title}}</title>
-    <link rel="stylesheet" href="/smeagol/main.css" type="text/css"/> 
-    <link rel="stylesheet" href="/smeagol/pygment.css" type="text/css"/> 
+    <link rel="stylesheet" href="{{base_path}}smeagol/main.css" type="text/css"/>
+    <link rel="stylesheet" href="{{base_path}}smeagol/pygment.css" type="text/css"/>
 
     <!--[if lt IE 9]>
-    <script src="/smeagol/html5.js"></script>
+    <script src="{{base_path}}smeagol/html5.js"></script>
     <![endif]-->
 
 	{{#tracking_id}}
