--- a/lib/smeagol/templates/layouts/footer.mustache
+++ b/lib/smeagol/templates/layouts/footer.mustache
@@ -1,5 +1,9 @@
 
 		<footer>
+      {{#author}}
+      <small style="float:left;">Last edited by <b>{{author}}</b> on {{date}}.</small>
+      {{/author}}
+
 			<small style="float:right;">
 				This site is a <a href="https://github.com/blog/699-making-github-more-open-git-backed-wikis">GitHub Wiki</a>
 				mirror powered by <a href="http://smeagolrb.info">Smeagol</a>.
