Spin-off static generator to Shelob project. [major]

--- a/lib/smeagol/templates/layouts/default.mustache
+++ b/lib/smeagol/templates/layouts/default.mustache
@@ -49,7 +49,7 @@
 <div id="wiki-content">
 <div class="wrap">
   <div id="wiki-body" class="gollum-markdown-content">
-  <div id="template">
+  <div id="template" class="markdown-body">
 {{#not_home?}}
   <h1>{{page_title}}</h1>
 {{/not_home?}}
