Use partials and rename default.mustache to page.mustache.

--- a/lib/smeagol/templates/layouts/versions.mustache
+++ b/lib/smeagol/templates/layouts/versions.mustache
@@ -1,11 +1,16 @@
 {{> header}}
-		
-<article>
-<h1>Versions</h1>
-<div id="content">
+
+<div id="wiki-content">
+<div class="wrap">
+
+  <h1>Versions</h1>
+
+  <div id="wiki-body">
 {{{content}}}
+  </div>
+
 </div>
-</article>
+</div>
 
 {{> footer}}
 
